# git-hooked

./: .gitignore  Cargo.toml  README.md  git_hooked.config.example.toml
src/: config.rs  git.rs  hook.rs  main.rs  path_utils.rs
