[package]
name = "git-hooked"
version = "0.1.0"
authors = ["Alexander Jeurissen <1220084+alexanderjeurissen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
atty = "0.2.14"
failure = "0.1.8"
serde = {version = "1.0.114", features = ["derive"]}
toml = "0.5.6"
regex = "1.3.9"
heck = "0.3.1"
